xxx.log
/usr/bin/gcc -o obj/CETD.o -c -Wall -g --std=c99 ./src/CETD.c	
./src/CETD.c: In function ‘rnd_arr_generation’:
./src/CETD.c:129:3: warning: statement with no effect [-Wunused-value]
   for(start;start < BLK_LENGTH;start++,i++)
   ^
./src/CETD.c: In function ‘CETD_tag_generation’:
./src/CETD.c:359:5: warning: passing argument 1 of ‘tag_gene’ from incompatible pointer type [enabled by default]
     tag_gene(shift_data, tag, y_num, tag_length);
     ^
In file included from ./src/../include/CETD.h:13:0,
                 from ./src/CETD.c:10:
./src/../include/tag.h:2:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void tag_gene(const uchar **data, uchar *tag, int number, int arr_length);
      ^
./src/CETD.c:395:7: error: ‘swap_data’ undeclared (first use in this function)
  free(swap_data);
       ^
./src/CETD.c:395:7: note: each undeclared identifier is reported only once for each function it appears in
make: *** [obj/CETD.o] Error 1
